modules/causal/tests/compile_fail/event_enum_no_serde_tag.stderr
error: #[event] on enums requires #[serde(tag = "...")] for variant discrimination
 --> tests/compile_fail/event_enum_no_serde_tag.rs:5:10
  |
5 | pub enum BadEvent {
  |          ^^^^^^^^

warning: unused imports: `Deserialize` and `Serialize`
 --> tests/compile_fail/event_enum_no_serde_tag.rs:1:13
  |
1 | use serde::{Serialize, Deserialize};
  |             ^^^^^^^^^  ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
